[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langvoice"
version = "0.1.0"
description = "Python SDK for LangVoice Text-to-Speech API with AI agent integrations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["tts", "text-to-speech", "langvoice", "ai", "langchain", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
async = ["aiohttp>=3.8.0"]
langchain = ["langchain-core>=0.1.0"]
openai = ["openai>=1.0.0"]
all = [
    "aiohttp>=3.8.0",
    "langchain-core>=0.1.0",
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "twine>=4.0.0",
    "build>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/langvoice-python"
Documentation = "https://github.com/yourusername/langvoice-python#readme"
Repository = "https://github.com/yourusername/langvoice-python"
Issues = "https://github.com/yourusername/langvoice-python/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/langvoice"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
