[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langvoice-sdk"
version = "0.1.0"
description = "Python SDK for LangVoice Text-to-Speech API with AI agent integrations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "LangVoice", email = "langvoice.official@gmail.com"}
]
keywords = ["tts", "text-to-speech", "langvoice", "ai", "langchain", "openai", "speech", "voice", "audio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
async = ["aiohttp>=3.8.0"]
langchain = ["langchain-core>=0.1.0"]
openai = ["openai>=1.0.0"]
all = [
    "aiohttp>=3.8.0",
    "langchain-core>=0.1.0",
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "twine>=4.0.0",
    "build>=1.0.0",
]

[project.urls]
Homepage = "https://www.langvoice.pro/"
Documentation = "https://github.com/LangVoice/langvoice-python-sdk#readme"
Repository = "https://github.com/LangVoice/langvoice-python-sdk"
Issues = "https://github.com/LangVoice/langvoice-python-sdk/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/langvoice_sdk"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
